--- a/RebateRatioPage/package.json
+++ b/RebateRatioPage/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "page1",
+  "name": "page11",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,9 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "bootstrap": "^5.3.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
